--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -1,12 +1,16 @@
-.cart-info {
+.cart-container {
     max-width: 85%;
     min-height: 50%;
     background-color: rgb(255, 255, 255);
     display: flex;
-    flex-direction: column;
     justify-content: start  ;
     margin: 50px auto;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.cart-info {
+    width: 50%;
+    display: flex;
 }
 
 .product-info {
@@ -53,4 +57,8 @@
     background-color: rgb(191, 35, 35);
     font-weight: bold;
     font-size: 20px;
+}
+
+.saleInfo {
+    width: 50%;
 }
