Agrego react-spinners

--- a/src/components/ItemDetailContainer/itemDetailContainer.css
+++ b/src/components/ItemDetailContainer/itemDetailContainer.css
@@ -1,5 +1,8 @@
 .container-item-detail { 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
