--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -3,8 +3,8 @@
     min-height: 50%;
     background-color: rgb(255, 255, 255);
     display: flex;
-    justify-content: start  ;
     margin: 50px auto;
+    justify-content: center;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
@@ -61,3 +61,26 @@
     width: 50%;
 }
 
+.empty-cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+}
+
+.empty-cart-title {
+    font-size: 40px;
+    color: rgb(96, 96, 96);
+}
+
+.empty-cart-description {
+    font-size: 20px;
+    color: rgb(96, 96, 96);
+}
+
+.empty-cart-button {
+    background-color: rgb(45, 57, 163);
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 5px;
+}
