--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,24 +1,26 @@
 .cart {
-    width: 100px;
-    height: 100px;
+    
+    height: 55px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.cart a{
-    width: 50%;
-}
 
 .cartLogo {
     width: 100%;
+    height: 100%;
 }
 
 .notification {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 25px;
+    display: inline-block;
     color: white;
-    background-color: rgb(175, 9, 9);
+    font-size: 20px;
+    background-color: rgb(202, 45, 45);
     border-radius: 45%;
+    text-align: center;
+    line-height: 1.2;
 }
 
