--- a/src/components/itemCounter/itemCounter.css
+++ b/src/components/itemCounter/itemCounter.css
@@ -1,4 +1,11 @@
-.counter {
+.counter-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px
+}
+
+.counter-display {
     width: 200px;
     height: 40px;
     background-color: #f0f0f0;
@@ -11,10 +18,23 @@
     margin: 10px;
 }
 
-button {
-    background-color: #1d609a;
+.counter-btn {
+    background-color: #537899;
     text-align: center;
     color: white;
-    font-weight: 500;
+    font-size: 20px;
+    font-family: Latto;
+    font-weight: bold;
     cursor: pointer;
+    border: none;
+}
+
+.disbaled-counter-btn {
+    background-color: #9a9a9a;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    font-family: Latto;
+    font-weight: bold;
+    border: none;
 }
