--- a/src/components/itemCounter/itemCounter.css
+++ b/src/components/itemCounter/itemCounter.css
@@ -19,7 +19,7 @@
 }
 
 .counter-btn {
-    background-color: #537899;
+    background-color: #4E4E7E;
     text-align: center;
     color: white;
     font-size: 20px;
