--- a/src/components/itemDetail/itemDetail.css
+++ b/src/components/itemDetail/itemDetail.css
@@ -38,7 +38,7 @@
     border-radius: 10px;
     color: white;
     font-size: 20px;
-    background-color: #1d609a;
+    background-color: #4E4E7E;
     cursor: pointer;
     border: 0;
 }
