--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -4,6 +4,7 @@
     background-color: rgb(255, 255, 255);
     margin: 50px auto;
     display: flex;
+    justify-content: center;    
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
@@ -27,14 +28,17 @@
     margin: 10px;
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid grey;
 }
 
 .thumbnail {
     max-width: 100px;
+    max-height: 100px;
 }
 
 .thumbnail img {
     width: 100%;
+    height: 100%;
 }
 
 .product-name {
@@ -44,6 +48,7 @@
 .product-price {
     justify-self: end;
     align-self: center;
+    font-size: 25px;
 
 }
 
@@ -60,6 +65,9 @@
 .clearButton {
     text-align: start;
     justify-self: start;
+    padding: 10px;
+    margin: 10px;
+    font-size: 20px;
 }
 
 .total {
@@ -99,6 +107,8 @@
     display: flex;
     flex-direction: column;
     justify-self: center;
+    border-left: 1px solid grey;
+    margin: 10px;
 }
 
 
@@ -123,4 +133,6 @@
 
 .customer-data-form-submit {
     justify-self: end;
+    align-self: center;
+    background-color: #4E4E7E;
 }
